Bug 68952 - PA_STREAM_FIX_* flags do not work with pa_stream_new_extended()
Summary: PA_STREAM_FIX_* flags do not work with pa_stream_new_extended()
Status: RESOLVED FIXED
Alias: None
Product: PulseAudio
Classification: Unclassified
Component: core (show other bugs)
Version: unspecified
Hardware: All All
: medium blocker
Assignee: pulseaudio-bugs
QA Contact: pulseaudio-bugs
URL:
Whiteboard:
Keywords:
Depends on:
Blocks: 65348
  Show dependency treegraph
 
Reported: 2013-09-04 18:36 UTC by Remi Denis-Courmont
Modified: 2014-01-10 08:22 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Remi Denis-Courmont 2013-09-04 18:36:06 UTC
1) Call pa_stream_new_extended() with two possible format, one IEC61937-based and one PCM.
2) Call pa_stream_connect_playback() on the resulting stream with PA_STREAM_FIX_RATE flag.

If PulseAudio selects the IEC format, it will fail with EINVAL. Thus there is no way to request fixed rate for the PCM format. Basically, we would need separate sets of flags for the different formats.

See also https://trac.videolan.org/vlc/ticket/9309
Comment 1 Tanu Kaskinen 2013-09-08 08:38:02 UTC
I want to get this sorted out before 5.0, so I'm marking this as a release blocker.
Comment 2 Tanu Kaskinen 2013-09-16 12:04:06 UTC
There are two ways to make this work: allow and ignore the FIX_* flags for non-PCM formats, or treat missing rate/format/channels information in a PCM format info struct as if FIX_* flags were set for for that format info only. We could implement both, they don't conflict with each other. I think the more correct way is the latter, because as Remi said, we should have separate sets of flags for the different formats, and this is a way to implement that. I plan to implement this solution (not today, but "soon").
Comment 3 Tanu Kaskinen 2013-11-11 21:10:16 UTC
I started working on this.
Comment 4 Arun Raghavan 2013-11-12 02:20:39 UTC
FWIW, I agree that this approach makes sense.
Comment 5 Tanu Kaskinen 2013-12-04 07:55:24 UTC
Fix sent to the mailing list: http://thread.gmane.org/gmane.comp.audio.pulseaudio.general/19062
Comment 6 Tanu Kaskinen 2014-01-10 08:22:31 UTC
Fix pushed to master.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.